--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "main": "src/index.js",
   "scripts": {
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom"
@@ -25,6 +27,7 @@
     "react-scripts": "3.0.0"
   },
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "typescript": "3.3.3"
   }
 }
