--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-scripts": "3.0.0"
   },
   "devDependencies": {
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.0",
     "gh-pages": "^2.0.1",
     "typescript": "3.3.3"
   }
