--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react-scripts": "^3.0.1"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.0",
+    "gh-pages": "^2.0.1",
+    "typescript": "3.3.3"
   }
 }
