--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     "not op_mini all"
   ],
   "dependencies": {
-    "highlight.js": "9.15.6",
-    "marked": "0.6.2",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-scripts": "3.0.0"
+    "highlight.js": "^9.15.8",
+    "marked": "^0.6.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.0.1"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1",
-    "typescript": "3.3.3"
+    "gh-pages": "^2.0.1"
   }
 }
